--- a/Clean SwiftUI/CleanSwiftUI/Unit Tests.xctemplate/TemplateInfo.plist
+++ b/Clean SwiftUI/CleanSwiftUI/Unit Tests.xctemplate/TemplateInfo.plist
@@ -26,7 +26,7 @@
 		</dict>
 		<dict>
 			<key>Default</key>
-			<string>___VARIABLE_sceneName:identifier___Scene</string>
+			<string>___VARIABLE_sceneName:identifier___</string>
 			<key>Identifier</key>
 			<string>productName</string>
 			<key>Type</key>
